ok gonna try with these CDN's. I wish there was a way to immediately test whether it has worked. The trouble with using a tutorial from a long time ago is that stuff deprecates, so we can't always follow him word for word

--- a/index.html
+++ b/index.html
@@ -4,9 +4,23 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Accordion Buttons | HTML, CSS, Bootstrap</title>
+    <!-- our own css -->
     <link rel="stylesheet" href="style.css" class="">
+    <!-- Bootstrap, apparently?? -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.6.2/dist/css/bootstrap.min.css">
+
+
 </head>
 <body>
-    
+    <h1 class="">Frequently Asked Questions</h1>
+
+
+
+
+
+    <!-- um, jQuery and JS CDNs.. do we put these in the head?  -->
+    <script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
